[package]
name = "ledger-ethereum"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Arjeski <tmarjeski@gmail.com>"]
description = "A library to communicate with the Ledger Ethereum app"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
ledger-transport = "0.10.0"
ledger-zondax-generic = "0.10.0"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10.0"
ethereum-tx-sign = "6.1.0"
hex = "0.4.3"
rlp = "0.5.2"
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes", "global-context"] }
serial_test = "1"
ledger-transport-speculos = { git = "https://github.com/trevarj/ledger-rs.git", rev = "fc29a24" }
tiny-keccak = "2.0.2"
tokio = { version = "1.25.0", features = ["full"] }
