[package]
name = "ledger-ethereum"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Arjeski <tmarjeski@gmail.com>"]
description = "A library to communicate with the Ledger Ethereum app"
license = "MIT"
readme = "README.md"
repository = "https://github.com/trevarj/ledger-ethereum-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
ledger-transport = "0.10.0"
ledger-zondax-generic = "0.10.0"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10.0"
hex = "0.4.3"
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes", "global-context"] }
serial_test = "1"
ledger-transport-speculos = { git = "https://github.com/trevarj/ledger-transport-speculos.git", rev = "0c335e9" }
# ledger-transport-speculos = { path = "../ledger-transport-speculos" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.25.0", features = ["full"] }
